5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4372/executions/1577_1559.log
== SUBMITION (2019-03-21 18:30:30) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print(string.lower())
-- EXECUTION TIME:
0.229533
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:30:57) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print(string.lower)
-- EXECUTION TIME:
0.170726
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:30:58) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print(string.lower)
-- EXECUTION TIME:
0.186295
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:31:13) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(string.lower)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.lower)
NameError: name 'string' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:31:22) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(string.lower())
-- EXECUTION TIME:
0.164756
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1559/main.py", line 2, in <module>
    print(string.lower())
NameError: name 'string' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:31:31) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(string.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.lower())
NameError: name 'string' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:32:26) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(string.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.lower())
NameError: name 'string' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:33:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(string.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.upper())
NameError: name 'string' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:33:39) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:33:41) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.130197
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
